--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,3 +1,5 @@
+@import 'variables/global';
+
 .container {
   min-height: 100vh;
   padding: 0 0.5rem;
@@ -5,7 +7,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 
 .main {
@@ -20,7 +21,6 @@
 .footer {
   width: 100%;
   height: 100px;
-  border-top: 1px solid #eaeaea;
   display: flex;
   justify-content: center;
   align-items: center;
