--- a/assets/styles/Container.module.scss
+++ b/assets/styles/Container.module.scss
@@ -9,3 +9,10 @@
     padding: 8px;
     margin: 0 auto;
 }
+
+.audioFeedContainer {
+    display: flex;
+    flex-direction: column;
+    z-index: 0;
+    position: relative;
+}
