--- a/assets/styles/Container.module.scss
+++ b/assets/styles/Container.module.scss
@@ -6,7 +6,7 @@
 .pageContainer {
     width: 100%;
     max-width: 792px;
-    padding: 8px;
+    padding: var(--s-small);
     margin: 0 auto;
 }
 
