--- a/assets/styles/globals.scss
+++ b/assets/styles/globals.scss
@@ -19,9 +19,16 @@
   --font-family-heading: 'Everett Extra Bold', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   --font-size: #{$global-font-size};
   --font-size-huge: 48px;
+  --font-size-medium: 17px;
   --font-size-large: 32px;
   --font-size-small: 14px;
   --line-height: #{$global-line-height};
+
+  // spacings
+  --s-big: 60px;
+  --s-medium: 40px;
+  --s-small: 8px;
+  --s-component: 4px;
 }
 
 
@@ -33,6 +40,10 @@ body {
   color: var(--text);
   background-color: var(--background);
   font-size: var(--font-size);
+}
+
+main {
+  // padding-top: 60px;
 }
 
 a {
@@ -48,3 +59,5 @@ a {
   background-color: var(--off-white);
   border-radius: 10px;
 }
+
+  
