--- a/components/audio.module.scss
+++ b/components/audio.module.scss
@@ -1,4 +1,5 @@
 @import '../assets/styles/variables/global.scss';
+@import '../assets/styles/mixins/buttons.scss';
 
 .container {
     --background: #{$color-white};
@@ -8,7 +9,7 @@
     background-color: var(--background);
     color: var(--text);
     border-radius: 14px;
-    padding: 4px;
+    padding: var(--s-component);
     box-shadow: 0px 3.79009px 20px rgba(0, 0, 0, 0.12);
     margin-top: -9.4%;
 
@@ -29,11 +30,10 @@
         transform: scale(0.95);
         filter: brightness(0.7) blur(0.5px);
     }
-    
+
     &:nth-child(3) {
         transform: scale(0.9);
         filter: brightness(0.3) blur(1px);
-        
     }
 }
 
@@ -44,7 +44,6 @@
 }
 
 .playerWaveform {
-
     wave {
 
         > wave {
@@ -55,7 +54,7 @@
 }
 
 .meta {
-    margin-top: 4px;
+    margin-top: var(--s-component);
     display: flex;
     justify-content: space-between;
 }
@@ -73,5 +72,42 @@
 }
 
 .tagItem + .tagItem {
-    margin-left: 4px;
+    margin-left: var(--s-component);
+}
+
+.playerButtons {
+    width: 100%;
+    max-width: 792px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: flex-end;
+    display: flex;
+    width: 100%;
+    margin-top: var(--s-small);
+}
+
+.playerButtonForward,
+.playerButtonPlayStop {
+    @extend %button--primary;
+    margin-left: var(--s-component);
+
+    &::after {
+        display: flex;
+    }
+}
+
+.playerButtonForward {
+    &::after {
+        position: absolute;
+        margin-right: -6px;
+        content: url("data:image/svg+xml,%3Csvg width='27' height='17' viewBox='0 0 27 17' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M13 17V9.10714L0 17V0L13 7.89286V0L27 8.5L13 17Z' fill='black' fill-opacity='0.6'/%3E%3C/svg%3E%0A");
+    }
+}
+
+.playerButtonPlayStop {
+    &::after {
+        position: absolute;
+        content: url("data:image/svg+xml,%3Csvg width='18' height='22' viewBox='0 0 18 22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M18 11L0 0V22L18 11Z' fill='black' fill-opacity='0.6'/%3E%3C/svg%3E%0A");
+
+    }
 }
