--- a/assets/styles/mixins/buttons.scss
+++ b/assets/styles/mixins/buttons.scss
@@ -1,4 +1,6 @@
 @import '../variables/global.scss';
+@import 'sass-mq';
+
 
 %reset-button {
     cursor: pointer;
@@ -8,6 +10,7 @@
     width: auto;
     overflow: visible;
     appearance: none;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.12);
 }
 
 %button {
@@ -17,7 +20,7 @@
         background-color: var(--brand);
         width: 60px;
         height: 60px;
-        border-radius: 14px;
+        border-radius: var(--r-outer);
         padding: var(--s-component);
         display: inline-flex;
         align-items: center;
@@ -28,20 +31,71 @@
             content: "";
             width: 52px;
             height: 100%;
-            border-radius: 14px - 4px;
+            border-radius: var(--r-inner);
             background-color: rgba(0,0,0,0.12);
             transition: 0.1s all ease-out;
+            @include mq($until: desktop) {
+                width: 44px;
+            }
         }
-        
+
         &:hover {
             &::before {
                 background-color: rgba(0,0,0,0.2 );
             }
         }
-        
+
         span {
             margin-left: var(--s-component);
+            margin-right: var(--s-small);
+        }
+
+        @include mq($until: desktop) {
+            width: 50px;
+            height: 50px;
         }
     }
 
+    &--secondary {
+        @extend %reset-button;
+        position: relative;
+        background-color: var(--background);
+        width: 60px;
+        height: 60px;
+        border-radius: var(--r-outer);
+        padding: var(--s-component);
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        color: $color-white;
+
+        &::before {
+            content: "";
+            width: 52px;
+            height: 100%;
+            border-radius: var(--r-inner);
+            background-color: rgba(255, 255, 255, 0.08);
+            transition: 0.1s all ease-out;
+            @include mq($until: desktop) {
+                width: 44px;
+            }
+            
+        }
+        
+        &:hover {
+            &::before {
+                background-color: rgba(255, 255, 255, 0.1);
+            }
+        }
+        
+        span {
+            margin-left: var(--s-component);
+            margin-right: var(--s-small);
+        }
+
+        @include mq($until: desktop) {
+            width: 50px;
+            height: 50px;
+        }
+    }
 }
