--- a/components/audio-placeholder.module.scss
+++ b/components/audio-placeholder.module.scss
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     background-color: $color-white;
-    border-radius: 14px;
+    border-radius: var(--r-outer);
     padding: var(--s-component);
     opacity: 0.3;
 }
@@ -40,7 +40,7 @@
 
 .tagItem {
     background-color: var(--off-white);
-    border-radius: 10px;
+    border-radius: var(--r-inner);
     height: 25px;
     width: 100px;
 }
