--- a/assets/styles/mixins/buttons.scss
+++ b/assets/styles/mixins/buttons.scss
@@ -56,6 +56,28 @@
         }
     }
 
+    &--primary--textonly {
+        @extend %reset-button;
+        position: relative;
+        background-color: var(--brand);
+        border-radius: var(--r-outer);
+        padding:0.68em 0.68em;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        color: $color-black;
+
+        span {
+            margin-left: var(--s-small);
+            margin-right: var(--s-small);
+        }
+
+        @include mq($until: desktop) {
+            width: 50px;
+            height: 50px;
+        }
+    }
+
     &--secondary {
         @extend %reset-button;
         position: relative;
@@ -79,15 +101,15 @@
             @include mq($until: desktop) {
                 width: 44px;
             }
-            
+
         }
-        
+
         &:hover {
             &::before {
                 background-color: rgba(255, 255, 255, 0.1);
             }
         }
-        
+
         span {
             margin-left: var(--s-component);
             margin-right: var(--s-small);
