--- a/assets/styles/Typo.module.scss
+++ b/assets/styles/Typo.module.scss
@@ -24,6 +24,7 @@
 .headingBig {
     @include font-size(22px);
     @include resp(font-size, (phone: 30px, phone-plus: 34px, phablet: 38px, tablet: 42px, desktop: 44px));
+    line-height: 1.1;
     font-size: 48px;
     font-family: var(--font-family-heading);
     font-weight: normal;
