--- a/components/audio.module.scss
+++ b/components/audio.module.scss
@@ -87,7 +87,8 @@
 }
 
 .playerButtonForward,
-.playerButtonPlayStop {
+.playerButtonPlayStop,
+.playerButtonPlay {
     @extend %button--primary;
     margin-left: var(--s-component);
 
@@ -113,5 +114,14 @@
         position: absolute;
         content: url("data:image/svg+xml,%3Csvg width='18' height='22' viewBox='0 0 18 22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M18 11L0 0V22L18 11Z' fill='black' fill-opacity='0.6'/%3E%3C/svg%3E%0A");
 
+    }
+}
+
+.playerButtonPlay {
+    &::after {
+        position: absolute;
+        margin-top: 7px;
+        margin-left: 4px;
+        content: url("data:image/svg+xml,%3Csvg width='18' height='22' viewBox='0 0 18 22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M18 11L0 0V22L18 11Z' fill='black' fill-opacity='0.6'/%3E%3C/svg%3E%0A");    
     }
 }
